# libxayagame

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  COPYING  Dockerfile  Makefile.am  NEWS  README.md  configure.ac  pyproject.toml  requirements.txt
cmake/: concat_files.cmake  config.h.in
doxygen/: Doxyfile  README.md
gamechannel/: .gitignore  CMakeLists.txt  Makefile.am  README.md  boardrules.cpp  boardrules.hpp  broadcast.cpp  broadcast.hpp  broadcast_tests.cpp  chaintochannel.cpp  chaintochannel.hpp  chaintochannel_tests.cpp  channelcore.pc.in  channelgame.cpp  channelgame.hpp  channelgame_tests.cpp  channelmanager.cpp  channelmanager.hpp  channelmanager.tpp  channelmanager_tests.cpp  channelmanager_tests.hpp  channelstatejson.cpp  channelstatejson.hpp  channelstatejson_tests.cpp  channelstatejson_tests.hpp  channeltest.py  daemon.cpp  daemon.hpp  database.cpp  database.hpp  database_tests.cpp  ethmover.cpp  ethmover.hpp  ethsignatures.cpp  ethsignatures.hpp  ethsignatures_tests.cpp  gamechannel.pc.in  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  (+57 more)
gamechannel/proto/: broadcast.proto  metadata.proto  signatures.proto  stateproof.proto  testprotos.proto
gamechannel/rpc-stubs/: eth.json  gsp.json  rpcbroadcast.json  wrappedchannel.json
mover/: .gitignore  CMakeLists.txt  Makefile.am  README.md  logic.cpp  logic.hpp  logic_tests.cpp  main.cpp  moves.cpp  moves.hpp  moves_tests.cpp  pending.cpp  pending.hpp  pending_tests.cpp
mover/gametest/: Makefile.am  basic.py  bind_address.py  bind_locally.py  catching_up.py  dupjsonkeys.py  getnullstate.py  lmdb_resize.py  mover.py  pending-disabled.py  pending-onesocket.py  pending-twosockets.py  pending.py  persistence-lmdb.py  persistence-sqlite.py  persistence.py  pruning.py  reorg.py  stopped_xayad.py  waitforchange.py  xayarpcwait.py
mover/proto/: mover.proto
nonfungible/: .gitignore  CMakeLists.txt  Makefile.am  README.md  assets.cpp  assets.hpp  assets_tests.cpp  dbutils.cpp  dbutils.hpp  logic.cpp  logic.hpp  main.cpp  moveparser.cpp  moveparser.hpp  moveprocessor.cpp  moveprocessor.hpp  moveprocessor_tests.cpp  pending.cpp  pending.hpp  pending_tests.cpp  rpcserver.cpp  rpcserver.hpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_tests.cpp  statejson.cpp  statejson.hpp  statejson_tests.cpp  testutils.cpp  testutils.hpp
nonfungible/gametest/: Makefile.am  burn.py  minting.py  nftest.py  reorg.py  sqlite_wal.py  statehash.py  targetblock.py  transfers.py
nonfungible/rpc-stubs/: nf.json
ships/: .gitignore  CMakeLists.txt  Makefile.am  README.md  board.cpp  board.hpp  board_tests.cpp  channel.cpp  channel.hpp  channel_tests.cpp  channelrpc.cpp  channelrpc.hpp  coord.cpp  coord.hpp  coord_tests.cpp  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  grid.cpp  grid.hpp  grid_tests.cpp  logic.cpp  logic.hpp  logic_tests.cpp  main-channel.cpp  main-gsp.cpp  main.cpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_tests.cpp  testutils.cpp  testutils.hpp
ships/channeltest/: Makefile.am  disputes.py  force_close.py  full_game.py  pending.py  reorg.py  tx_fail.py  validateposition.py  waitforchange.py
ships/docker/: Dockerfile  entrypoint.sh
ships/gametest/: Makefile.am  channel_management.py  disputes.py  force_close.py  getchannel.py  multi_moves.py  pending.py  reorg.py  shipstest.py  winner_statement.py
ships/proto/: boardmove.proto  boardstate.proto  winnerstatement.proto
ships/rpc-stubs/: channel.json
src/: .gitignore  Makefile.am  logic.cpp  logic.hpp  rpsd.cpp
wasm/: CMakeLists.txt  README.md  XayaGameWasmConfig.cmake.in  XayaWasm.cmake
wasm/docker/: Dockerfile  libglog.pc
wasm/shims/: base64_shim.cpp  cryptorand_shim.cpp  glog_stub.hpp  hash_shim.cpp  json_stub.hpp  protoversion_shim.cpp  sha256.cpp  sha256.h
wasm/shims/gamechannel/: protoversion.hpp
wasm/shims/glog/: logging.h
wasm/shims/json/: json.h  writer.h
websocket/: CMakeLists.txt  Dockerfile  Makefile.am  README.md  gsp-websocket-server.py
xayagame/: .gitignore  CMakeLists.txt  Makefile.am  coprocessor.cpp  coprocessor.hpp  coprocessor_tests.cpp  defaultmain.cpp  defaultmain.hpp  game.cpp  game.hpp  game_tests.cpp  gamelogic.cpp  gamelogic.hpp  gamelogic_tests.cpp  gamerpcserver.cpp  gamerpcserver.hpp  hash.cpp  hash.hpp  heightcache.cpp  heightcache.hpp  heightcache_tests.cpp  libxayagame.pc.in  lmdbstorage.cpp  lmdbstorage.hpp  lmdbstorage_tests.cpp  main-dumpdb.cpp  mainloop.cpp  mainloop.hpp  mainloop_tests.cpp  pendingmoves.cpp  pendingmoves.hpp  pendingmoves_tests.cpp  perftimer.hpp  pruningqueue.cpp  pruningqueue.hpp  pruningqueue_tests.cpp  random.cpp  random.hpp  random_tests.cpp  rest.cpp  (+34 more)
xayagame/rpc-stubs/: .gitignore  game.json  test.json  xaya-wallet.json  xaya.json
xayagametest/: Makefile.am  game.py  premine.py  testcase.py  xaya.py
xayautil/: CMakeLists.txt  Makefile.am  base64.cpp  base64.hpp  base64_tests.cpp  compression.cpp  compression.hpp  compression_internal.hpp  compression_tests.cpp  cryptorand.cpp  cryptorand.hpp  cryptorand_tests.cpp  hash.cpp  hash.hpp  hash_tests.cpp  jsonutils.cpp  jsonutils.hpp  jsonutils_tests.cpp  libxayautil.pc.in  random.cpp  random.hpp  random.tpp  random_tests.cpp  sources.cmake  uint256.cpp  uint256.hpp  uint256_tests.cpp
